<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/txtViewName"
        android:layout_width="120dp"
        android:layout_height="30dp"
        android:layout_marginStart="34dp"
        android:layout_marginEnd="257dp"
        android:gravity="center_vertical"
        android:text="@string/name"
        app:layout_constraintBottom_toTopOf="@+id/edtTextName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edtTextName"
        android:layout_width="306dp"
        android:layout_height="52dp"
        android:layout_marginStart="34dp"
        android:layout_marginEnd="71dp"
        android:ems="10"
        android:gravity="center_vertical"
        android:inputType="textPersonName"
        android:maxLines="1"
        app:layout_constraintBottom_toTopOf="@+id/txtViewSurname"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtViewName" />

    <TextView
        android:id="@+id/txtViewSurname"
        android:layout_width="120dp"
        android:layout_height="30dp"
        android:layout_marginStart="34dp"
        android:layout_marginEnd="257dp"
        android:gravity="center_vertical"
        android:text="@string/surname"
        app:layout_constraintBottom_toTopOf="@+id/edtTextSurName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtTextName" />

    <EditText
        android:id="@+id/edtTextSurName"
        android:layout_width="306dp"
        android:layout_height="52dp"
        android:layout_marginStart="34dp"
        android:layout_marginEnd="71dp"
        android:ems="10"
        android:gravity="center_vertical"
        android:inputType="textPersonName"
        android:maxLines="1"
        app:layout_constraintBottom_toTopOf="@+id/txtViewDate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtViewSurname" />

    <TextView
        android:id="@+id/txtViewDate"
        android:layout_width="120dp"
        android:layout_height="30dp"
        android:layout_marginStart="34dp"
        android:layout_marginEnd="257dp"
        android:gravity="center_vertical"
        android:text="@string/birthdate"
        app:layout_constraintBottom_toTopOf="@+id/edtDate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtTextSurName" />

    <EditText
        android:id="@+id/edtDate"
        android:layout_width="323dp"
        android:layout_height="44dp"
        android:layout_marginStart="34dp"
        android:layout_marginEnd="54dp"
        android:clickable="true"
        android:inputType="none"
        android:maxLines="1"
        app:layout_constraintBottom_toTopOf="@+id/txtViewAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtViewDate"
        android:focusable="false"
        tools:ignore="TextFields" />

    <TextView
        android:id="@+id/txtViewAddress"
        android:layout_width="120dp"
        android:layout_height="30dp"
        android:layout_marginStart="34dp"
        android:layout_marginEnd="257dp"
        android:gravity="center_vertical"
        android:text="@string/address"
        app:layout_constraintBottom_toTopOf="@+id/edtTextAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtDate" />

    <EditText
        android:id="@+id/edtTextAddress"
        android:layout_width="306dp"
        android:layout_height="52dp"
        android:layout_marginStart="34dp"
        android:layout_marginEnd="71dp"
        android:ems="10"
        android:gravity="center_vertical"
        android:inputType="textPersonName"
        android:maxLines="1"
        app:layout_constraintBottom_toTopOf="@+id/txtViewPhone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtViewAddress" />

    <TextView
        android:id="@+id/txtViewPhone"
        android:layout_width="120dp"
        android:layout_height="30dp"
        android:layout_marginStart="34dp"
        android:layout_marginEnd="257dp"
        android:gravity="center_vertical"
        android:text="@string/telephone"
        app:layout_constraintBottom_toTopOf="@+id/edtTextPhone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtTextAddress" />

    <EditText
        android:id="@+id/edtTextPhone"
        android:layout_width="306dp"
        android:layout_height="52dp"
        android:layout_marginStart="34dp"
        android:layout_marginEnd="71dp"
        android:ems="10"
        android:gravity="center_vertical"
        android:inputType="phone"
        android:maxLines="1"
        app:layout_constraintBottom_toTopOf="@+id/txtViewDepartament"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtViewPhone" />

    <TextView
        android:id="@+id/txtViewDepartament"
        android:layout_width="120dp"
        android:layout_height="30dp"
        android:layout_marginStart="34dp"
        android:layout_marginEnd="257dp"
        android:gravity="center_vertical"
        android:maxLines="1"
        android:text="@string/departament"
        app:layout_constraintBottom_toTopOf="@+id/spinnerDepartament"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtTextPhone" />

    <Spinner
        android:id="@+id/spinnerDepartament"
        android:layout_width="327dp"
        android:layout_height="48dp"
        android:layout_marginStart="34dp"
        android:layout_marginEnd="50dp"
        app:layout_constraintBottom_toTopOf="@+id/btnSavePerson"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtViewDepartament" />


    <Button
        android:id="@+id/btnSavePerson"
        android:layout_width="327dp"
        android:layout_height="60dp"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="49dp"
        android:text="@string/save_changes"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerDepartament" />


</androidx.constraintlayout.widget.ConstraintLayout>